// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TotalCost /> check render with customClasses = testclass provided 1`] = `
<p
  className="testclass"
>
  Total cost: 100
</p>
`;

exports[`<TotalCost /> check render without customClasses provided 1`] = `
<p
  className=""
>
  Total cost: 100
</p>
`;
